add welcome page

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lobehub/chat-plugin-sdk": "^1",
     "@lobehub/chat-plugins-gateway": "^1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tavily/core": "^0.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
